--- a/PositionIn/MembershipMessageController/MembershipMessageController.xib
+++ b/PositionIn/MembershipMessageController/MembershipMessageController.xib
@@ -147,7 +147,7 @@
                     </variation>
                 </scrollView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="TAt-3E-lgW" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="HlF-NO-Nvb"/>
                 <constraint firstAttribute="trailing" secondItem="GtA-Pi-fNA" secondAttribute="trailing" id="Q5P-6I-ZrJ"/>
