--- a/PositionIn/NotificationViewController/Views/PositionIn.NotificationTableViewCell.xib
+++ b/PositionIn/NotificationViewController/Views/PositionIn.NotificationTableViewCell.xib
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="faw-fP-IIm" customClass="NotificationTableViewCell" customModule="PositionIn" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="faw-fP-IIm" id="CdQ-Ud-qqu">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="49.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AddIcon" translatesAutoresizingMaskIntoConstraints="NO" id="6Iq-rd-X5i">
-                        <rect key="frame" x="8" y="5" width="40" height="40"/>
+                        <rect key="frame" x="8" y="9" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="QbI-xZ-Wff"/>
                             <constraint firstAttribute="width" constant="40" id="egt-H9-XGb"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N7F-4L-kJN">
-                        <rect key="frame" x="56" y="5" width="256" height="20"/>
+                        <rect key="frame" x="56" y="10" width="256" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Asq-50-Xyh">
-                        <rect key="frame" x="56" y="28" width="256" height="17"/>
+                        <rect key="frame" x="56" y="32" width="256" height="17"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -39,15 +39,21 @@
                     <constraint firstAttribute="bottom" secondItem="6Iq-rd-X5i" secondAttribute="bottom" constant="4.5" id="01c-q9-4rs"/>
                     <constraint firstItem="Asq-50-Xyh" firstAttribute="top" secondItem="N7F-4L-kJN" secondAttribute="bottom" constant="4" id="4Wf-E3-kdD"/>
                     <constraint firstAttribute="trailing" secondItem="N7F-4L-kJN" secondAttribute="trailing" constant="8" id="8nj-ln-bEd"/>
-                    <constraint firstAttribute="bottom" secondItem="Asq-50-Xyh" secondAttribute="bottom" constant="4.5" id="9u0-2s-6Ak"/>
+                    <constraint firstAttribute="bottom" secondItem="Asq-50-Xyh" secondAttribute="bottom" constant="10" id="9u0-2s-6Ak"/>
                     <constraint firstItem="N7F-4L-kJN" firstAttribute="leading" secondItem="6Iq-rd-X5i" secondAttribute="trailing" constant="8" id="IOc-4s-gyF"/>
                     <constraint firstItem="6Iq-rd-X5i" firstAttribute="leading" secondItem="CdQ-Ud-qqu" secondAttribute="leadingMargin" id="SPj-xj-v4R"/>
                     <constraint firstItem="Asq-50-Xyh" firstAttribute="leading" secondItem="6Iq-rd-X5i" secondAttribute="trailing" constant="8" id="fmK-AY-Te7"/>
                     <constraint firstAttribute="trailing" secondItem="Asq-50-Xyh" secondAttribute="trailing" constant="8" id="mVm-gM-ONe"/>
-                    <constraint firstItem="N7F-4L-kJN" firstAttribute="top" secondItem="CdQ-Ud-qqu" secondAttribute="top" constant="5" id="pe2-WM-btN"/>
+                    <constraint firstItem="N7F-4L-kJN" firstAttribute="top" secondItem="CdQ-Ud-qqu" secondAttribute="top" constant="10" id="pe2-WM-btN"/>
                     <constraint firstItem="6Iq-rd-X5i" firstAttribute="top" secondItem="CdQ-Ud-qqu" secondAttribute="top" constant="5" id="spm-6C-8Sn"/>
                     <constraint firstItem="6Iq-rd-X5i" firstAttribute="centerY" secondItem="CdQ-Ud-qqu" secondAttribute="centerY" id="wyE-uW-TDz"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="01c-q9-4rs"/>
+                        <exclude reference="spm-6C-8Sn"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
