--- a/PositionIn/News/NewsTableViewCell/PositionIn.NewsTableViewCell.xib
+++ b/PositionIn/News/NewsTableViewCell/PositionIn.NewsTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -82,7 +82,7 @@
                                         <rect key="frame" x="110" y="0.0" width="194" height="53"/>
                                         <color key="tintColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                        <state key="normal" title="0" image="communityPost">
+                                        <state key="normal" title="0" image="communityPostUnactive">
                                             <color key="titleColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -172,6 +172,6 @@
     </objects>
     <resources>
         <image name="communityLike" width="22" height="22"/>
-        <image name="communityPost" width="24" height="24"/>
+        <image name="communityPostUnactive" width="24" height="24"/>
     </resources>
 </document>
