--- a/PositionIn/News/NewsTableViewCell/PositionIn.NewsTableViewCell.xib
+++ b/PositionIn/News/NewsTableViewCell/PositionIn.NewsTableViewCell.xib
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="vmF-dk-LAG" customClass="NewsTableViewCell" customModule="PositionIn" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="290"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="370"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vmF-dk-LAG" id="6tM-Tp-Q18">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="289.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="369.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VFT-5Z-uSd">
-                        <rect key="frame" x="8" y="8" width="304" height="274"/>
+                        <rect key="frame" x="8" y="8" width="304" height="354"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z5a-Vc-Unv">
-                                <rect key="frame" x="0.0" y="0.0" width="304" height="80"/>
+                                <rect key="frame" x="0.0" y="0.0" width="304" height="160"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="wai-cu-y5i"/>
+                                    <constraint firstAttribute="height" constant="160" id="wai-cu-y5i"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BuU-PG-vaO" customClass="AvatarView" customModule="PositionIn" customModuleProvider="target">
-                                <rect key="frame" x="8" y="88" width="40" height="40"/>
+                                <rect key="frame" x="8" y="168" width="40" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="FPS-Xt-rO6"/>
@@ -33,7 +33,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Wizard of the Coast" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ghU-PB-oTZ">
-                                <rect key="frame" x="56" y="88" width="240" height="20"/>
+                                <rect key="frame" x="56" y="168" width="240" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="OcQ-EQ-pap"/>
                                 </constraints>
@@ -42,24 +42,24 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="270" text="0.09 miles" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CmM-7b-atD">
-                                <rect key="frame" x="56" y="135" width="240" height="17"/>
+                                <rect key="frame" x="56" y="215" width="240" height="17"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="260" verticalHuggingPriority="260" text="Edward Ryan" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gvg-wy-92o">
-                                <rect key="frame" x="56" y="113" width="240" height="17"/>
+                                <rect key="frame" x="56" y="193" width="240" height="17"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                 <color key="textColor" red="0.61176470589999998" green="0.61176470589999998" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wb6-xM-xc6">
-                                <rect key="frame" x="56" y="160" width="240" height="53"/>
+                                <rect key="frame" x="56" y="240" width="240" height="53"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xzk-7w-btk">
-                                <rect key="frame" x="0.0" y="221" width="304" height="53"/>
+                                <rect key="frame" x="0.0" y="301" width="304" height="53"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r8Z-ur-RJI">
                                         <rect key="frame" x="0.0" y="0.0" width="110" height="53"/>
@@ -70,7 +70,7 @@
                                         <color key="tintColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <inset key="contentEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                        <state key="normal" title="0" image="communityLike">
+                                        <state key="normal" title="0" image="ic_like_up">
                                             <color key="titleColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -82,7 +82,7 @@
                                         <rect key="frame" x="110" y="0.0" width="194" height="53"/>
                                         <color key="tintColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                        <state key="normal" title="0" image="communityPost">
+                                        <state key="normal" title="0" image="communityPostUnactive">
                                             <color key="titleColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -171,7 +171,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="communityLike" width="22" height="22"/>
-        <image name="communityPost" width="24" height="24"/>
+        <image name="communityPostUnactive" width="24" height="24"/>
+        <image name="ic_like_up" width="24" height="24"/>
     </resources>
 </document>
