--- a/PositionIn/People/PeopleFollowingViewController.xib
+++ b/PositionIn/People/PeopleFollowingViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PeopleFollowingViewController" customModule="PositionIn" customModuleProvider="target">
             <connections>
+                <outlet property="noFollowersWorningLabel" destination="qh8-wU-bsN" id="hf7-d2-Se5"/>
                 <outlet property="tableView" destination="JxX-6c-MFk" id="6eu-yx-oBj"/>
                 <outlet property="view" destination="iN0-l3-epB" id="Zv8-xH-0z4"/>
             </connections>
@@ -23,13 +24,23 @@
                         <outlet property="delegate" destination="-1" id="ODn-TU-7hB"/>
                     </connections>
                 </tableView>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Press Explore tab to follow new people" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qh8-wU-bsN">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="JxX-6c-MFk" secondAttribute="trailing" id="2oj-Hb-23S"/>
+                <constraint firstAttribute="trailing" secondItem="qh8-wU-bsN" secondAttribute="trailing" id="FJQ-0x-WHr"/>
+                <constraint firstAttribute="bottom" secondItem="qh8-wU-bsN" secondAttribute="bottom" id="M26-Ou-VmM"/>
                 <constraint firstItem="JxX-6c-MFk" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Vym-fe-h1t"/>
                 <constraint firstItem="JxX-6c-MFk" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="WS7-MW-IER"/>
                 <constraint firstAttribute="bottom" secondItem="JxX-6c-MFk" secondAttribute="bottom" id="gSD-8q-Rc3"/>
+                <constraint firstItem="qh8-wU-bsN" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="gwx-rL-Uw9"/>
+                <constraint firstItem="qh8-wU-bsN" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="k2s-Eg-dBb"/>
             </constraints>
         </view>
     </objects>
