--- a/PositionIn/Views/CommunityCells/PositionIn.CommunityHeaderCell.xib
+++ b/PositionIn/Views/CommunityCells/PositionIn.CommunityHeaderCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -77,6 +77,7 @@
             <connections>
                 <outlet property="captionLabel" destination="2rt-Jw-7c4" id="DDK-Hj-xGj"/>
                 <outlet property="communityType" destination="z9s-V9-6Tm" id="Z3e-Kd-0Qt"/>
+                <outlet property="communityTypeImageWidthConstraint" destination="JaK-Nk-3sr" id="M7I-4h-hqY"/>
                 <outlet property="contentImageView" destination="eCc-QS-ao5" id="fFd-3b-wbE"/>
                 <outlet property="infoButton" destination="pbh-Rx-aQ3" id="VYX-YO-bFK"/>
             </connections>
