--- a/PositionIn/Classes/Application Layer/Stories/Membership/Interface/MemberCard/MembershipCardView/MembershipCardView.xib
+++ b/PositionIn/Classes/Application Layer/Stories/Membership/Interface/MemberCard/MembershipCardView/MembershipCardView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -10,6 +10,7 @@
                 <outlet property="backgroundImageView" destination="CTo-a0-nVg" id="dtU-wo-1JW"/>
                 <outlet property="cardIdLabel" destination="QZk-6f-HbS" id="fPs-RO-kWZ"/>
                 <outlet property="expirationDateLabel" destination="V48-aG-yi1" id="ULT-gi-oJZ"/>
+                <outlet property="expirationDateTitleLabel" destination="11v-HE-kUH" id="ESF-lu-YmA"/>
                 <outlet property="firstNameLabel" destination="Iu5-SZ-FcM" id="bhg-hd-xPe"/>
                 <outlet property="lastNameLabel" destination="Zdj-Hi-Dwn" id="2hR-MK-0hN"/>
                 <outlet property="planNameLabel" destination="0kT-vq-qdh" id="ge7-OH-cxU"/>
